@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-10-26T00:46:51Z",
-  "count_outdated" : 813,
-  "uniques_outdated" : 423,
+  "timestamp" : "2024-10-31T00:49:44Z",
+  "count_outdated" : 814,
+  "uniques_outdated" : 424,
   "count" : 815,
   "uniques" : 425,
   "clones" : [
-    {
-      "timestamp": "2024-10-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-10-23T00:00:00Z",
       "count": 1,
